<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    tools:context="net.maxsoft.precioustracker.CreateItemFragment" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/lblItemName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/itemName"
                    android:textAppearance="@style/LabelTextBold" />

                <EditText
                    android:id="@+id/txtItemName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="text" >

                    <requestFocus />
                </EditText>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/lblLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:textAppearance="@style/LabelTextBold" />

                <EditText
                    android:id="@+id/txtLocation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="text" >
                </EditText>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/lblCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category"
                    android:textAppearance="@style/LabelTextBold" />

                <Spinner
                    android:id="@+id/lstCategory"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/lblItemPhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lblItemPhoto"
                    android:textAppearance="@style/LabelTextBold" />

                <ImageView
                    android:id="@+id/imgPortrait"
                    android:layout_width="128dp"
                    android:layout_weight="1"
                    android:layout_height="128dp"
                    android:scaleType="fitCenter"
                    android:contentDescription="@string/descImgSnapshot"
                    android:maxHeight="128dp"
                    android:maxWidth="128dp"
                    android:onClick="onTakePortrait"
                    android:src="@drawable/ic_action_photo" />
            </TableRow>
        </TableLayout>

        <LinearLayout
            style="@android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btnCancelItem"
                style="@android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onCancel"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/btnSaveItem"
                style="@android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onSave"
                android:text="@string/save" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>