<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/element_margin"
        android:paddingLeft="@dimen/element_margin"
        android:paddingRight="@dimen/element_margin"
        android:paddingTop="@dimen/element_margin" >

        <TextView
            android:id="@+id/lblItemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/element_margin"
            android:text="@string/itemName"
            android:textAppearance="@style/LabelTextBold" />

        <TextView
            android:id="@+id/txtItemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/element_margin"
            android:text="" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/element_margin"
        android:paddingLeft="@dimen/element_margin"
        android:paddingRight="@dimen/element_margin"
        android:paddingTop="@dimen/element_margin" >

        <TextView
            android:id="@+id/lblDateMoved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/element_margin"
            android:text="@string/dateMoved"
            android:textAppearance="@style/LabelTextBold" />

        <TextView
            android:id="@+id/txtDateMoved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/element_margin"
            android:text="" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/element_margin"
        android:paddingLeft="@dimen/element_margin"
        android:paddingRight="@dimen/element_margin"
        android:paddingTop="@dimen/element_margin" >

        <TextView
            android:id="@+id/lblFromWhere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/element_margin"
            android:text="@string/fromWhere"
            android:textAppearance="@style/LabelTextBold" />

        <TextView
            android:id="@+id/txtFromWhere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/element_margin"
            android:text="" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/element_margin"
        android:paddingLeft="@dimen/element_margin"
        android:paddingRight="@dimen/element_margin"
        android:paddingTop="@dimen/element_margin" >

        <TextView
            android:id="@+id/lblToWhere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/element_margin"
            android:text="@string/toWhere"
            android:textAppearance="@style/LabelTextBold" />

        <TextView
            android:id="@+id/txtToWhere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/element_margin"
            android:text="" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/element_margin"
        android:paddingLeft="@dimen/element_margin"
        android:paddingRight="@dimen/element_margin"
        android:paddingTop="@dimen/element_margin" >

        <TextView
            android:id="@+id/lblSnapshot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/element_margin"
            android:text="@string/lblSnapshot"
            android:textAppearance="@style/LabelTextBold" />

        <ImageView
            android:id="@+id/imgSnapshot"
            android:contentDescription="@string/descImgSnapshot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_action_photo"
            android:onClick="onSnapshotClicked" />

    </TableRow>

</TableLayout>